test/functions/return-type-class-hierarchy/owned-child1-borrowed-child2.1.good
owned-child1-borrowed-child2.chpl:7: error: unable to resolve return type
owned-child1-borrowed-child2.chpl:7: note: did not attempt to find common parent type because some return types are managed while others are borrowed
